web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-method/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,7)
1|async f() { class X { async await(){} } }
 |     ^
[SyntaxError]: Missing semicolon or line terminator. (1,11)
1|async f() { class X { async await(){} } }
 |         ^
